Replacing most uses of old messaging with Components And added an item for in game interaction with the plugin